# Hackaton

./: readme.md
hack1t3_back/: .env  Cargo.toml  readme.md
hack1t3_back/migrations/: 20220504140231_csv_files.up.sql  20220505064440_documents_headers.up.sql  20220505074247_pdfs_rows.up.sql  20220505074716_documents_cells.up.sql
hack1t3_back/src/: db.rs  logger.rs  main.rs  models.rs  utils.rs
hack1t3_back/src/cotrollers/: get_table_controller.rs  loader_controller.rs  mod.rs  svg_files_contoller.rs  update_table_data_controller.rs
hack1t3_front/: package-lock.json  package.json
hack1t3_front/src/: App.css  App.js
hack1t3_front/src/api/: get.api.js  post.api.js  serverUrl.js
hack1t3_front/src/components/: export.components.js
hack1t3_front/src/components/CsvTableCell/: CsvTableCell.components.jsx  CsvTableCell.components.scss
hack1t3_front/src/components/CsvTableRow/: CsvTableRow.components.jsx  CsvTableRow.components.scss
hack1t3_front/src/components/modal/: ModalWindow.components.jsx  ModalWindow.scss
hack1t3_front/src/components/modalContent/cellModal/: CellModal.components.jsx  CellModal.scss
hack1t3_front/src/pages/: export.pages.js
hack1t3_front/src/pages/csvList/: csvList.pages.jsx  csvList.pages.scss
hack1t3_front/src/pages/csvTable/: csvTable.pages.jsx  csvTable.pages.scss
hack1t3_front/src/pages/notFoundPage/: NotFoundPage.pages.jsx
hack1t3_front/src/pages/test3/: Test3.pages.jsx
