[package]
name = "hack1t3_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.10"
log = "0.4.17"
fern = "0.6.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.5.13", features = ["runtime-actix-rustls", "chrono", "mysql"] }
actix-web = "4.0.1"
actix-cors = "0.6.1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1.6"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
itertools = "0.10.3"